Wrap all listener invocations in safe wrapper with logger output