@@ -4,7 +4,10 @@ import jakarta.annotation.Nonnull;
 import jakarta.annotation.Nullable;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
+import org.slf4j.Logger;
+import software.coley.recaf.analytics.logging.Logging;
 import software.coley.recaf.services.Service;
+import software.coley.recaf.util.CollectionUtil;
 import software.coley.recaf.workspace.model.bundle.JvmClassBundle;
 import software.coley.recaf.workspace.model.resource.WorkspaceResource;
 
@@ -20,6 +23,7 @@ import java.util.List;
 @ApplicationScoped
 public class MappingListeners implements Service {
 	public static final String SERVICE_ID = "mapping-listeners";
+	private static final Logger logger = Logging.get(MappingListeners.class);
 	private final List<MappingApplicationListener> mappingApplicationListeners = new ArrayList<>();
 	private final MappingListenersConfig config;
 
@@ -66,22 +70,20 @@ public class MappingListeners implements Service {
 		if (listeners.isEmpty())
 			return null;
 		else if (listeners.size() == 1)
-			return listeners.get(0);
+			return listeners.getFirst();
 
 		// Bundle multiple listeners.
 		return new MappingApplicationListener() {
 			@Override
 			public void onPreApply(@Nonnull MappingResults mappingResults) {
-				for (MappingApplicationListener listener : listeners) {
-					listener.onPreApply(mappingResults);
-				}
+				CollectionUtil.safeForEach(listeners, listener -> listener.onPreApply(mappingResults),
+						(listener, t) -> logger.error("Exception thrown before applying mappings", t));
 			}
 
 			@Override
 			public void onPostApply(@Nonnull MappingResults mappingResults) {
-				for (MappingApplicationListener listener : listeners) {
-					listener.onPostApply(mappingResults);
-				}
+				CollectionUtil.safeForEach(listeners, listener -> listener.onPostApply(mappingResults),
+						(listener, t) -> logger.error("Exception thrown after applying mappings", t));
 			}
 		};
 	}
